--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["jinpu"]
 
 [dependencies.usiagent]
-git = "https://github.com/j6k1/USIAgent.git"
+#git = "https://github.com/j6k1/USIAgent.git"
+path = "F:\\source\\Rust\\USIAgent"
