--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "csaparser"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["jinpu"]
 
 [dependencies.usiagent]
 #git = "https://github.com/j6k1/USIAgent.git"
-path = "F:\\source\\Rust\\USIAgent"
+path = "../USIAgent"
