Cargo.toml,.gitignore更新

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "csaparser"
 version = "0.3.0"
-authors = ["jinpu"]
+authors = ["jinpu <nanasi18@gmail.com>"]
+description = "CsaParser is a parser for the CSA standard file format of Computer Shogi."
+documentation = "https://docs.rs/CsaParser"
+homepage = "https://crates.io/crates/CsaParser"
+repository = "https://github.com/j6k1/CsaParser"
+
+readme = "README.md"
+
+keywords = ["shogi","shogiai","csa-format"]
+categories = []
+license = "MIT"
 
 [dependencies.usiagent]
 #git = "https://github.com/j6k1/USIAgent.git"
